--- a/task6/tuyaqiang.html
+++ b/task6/tuyaqiang.html
@@ -36,7 +36,7 @@
 			.omg2 div{
 				height: 150px;
 				width: 100px;
-				background: url(img/22.jpg) no-repeat;
+				background: url(img/22.JPG) no-repeat;
 				background-size:contain ;
 				margin-left:15px;
 				margin-top:20px;		
@@ -50,7 +50,7 @@
 			.omg3 div{
 				height: 150px;
 				width: 180px;
-				background: url(img/33.jpg) no-repeat;
+				background: url(img/33.JPG) no-repeat;
 				background-size:contain ;
 				margin-left:10px;
 				margin-top:20px;		
@@ -66,7 +66,7 @@
 			.omg4 div{
 				height: 130px;
 				width: 150px;
-				background: url(img/44.jpg) no-repeat;
+				background: url(img/44.JPG) no-repeat;
 				background-size:contain ;
 				margin-left:15px;
 				margin-top:20px;		
@@ -80,7 +80,7 @@
 			.omg5 div{
 				height: 150px;
 				width: 100px;
-				background: url(img/55.jpg) no-repeat;
+				background: url(img/55.JPG) no-repeat;
 				background-size:contain ;
 				margin-left:15px;
 				margin-top:20px;		
@@ -94,7 +94,7 @@
 			.omg6 div{
 				height: 150px;
 				width: 180px;
-				background: url(img/66.jpg) no-repeat;
+				background: url(img/66.JPG) no-repeat;
 				background-size:contain ;
 				margin-left:10px;
 				margin-top:20px;		
